--- a/Responsive Web Design Practice/css/style.css
+++ b/Responsive Web Design Practice/css/style.css
@@ -20,6 +20,13 @@ ul{
 	padding: 0;
 }
 
+.button_1{
+	height: 38px;
+	background: #e8491d;
+	border: none;
+	padding: 0 20px 0 20px;
+	color: #ffffff;
+}
 
 /*Header*/
 header{
@@ -97,11 +104,36 @@ header a:hover{
 
 #newsletter form{
 	float: right;
-	margin-top: 16px;
+	margin-top: 16 px;
 }
 
 #newsletter input[type="email"]{
 	padding: 4px;
 	height: 25px;
 	width: 250px;
+	margin-top: 17px;
+}
+
+/*Boxes*/
+#boxes{
+	margin-top: 20px;
+}
+
+#boxes .box{
+	text-align: center;
+	float: left;
+	width: 30%;
+	padding: 10px;
+}
+
+#boxes .box img{
+	width: 90px;
+}
+
+footer{
+	padding:20px;
+	margin-top: 20px;
+	color: #ffffff;
+	background-color: #e8491d;
+	text-align: center;
 }
